Name:                   s3
Version:                0.0.0
Author:                 Fujimura Daisuke <me@fujimuradaisuke.com>
Maintainer:             Fujimura Daisuke <me@fujimuradaisuke.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      S3
  Other-Modules:        S3.Internal
                        , S3.Ls
  Build-Depends:        base >= 4 && < 5
                        , free
                        , parsec
                        , process
                        , mtl

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , free
                      , parsec
                      , process
                      , mtl


Source-Repository head
  Type:                 git
--  Location:             
